--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,15 @@
     margin: 0;
     }
     /* 헤더 */
-    header 
+    #header 
     {
     background: #1e1e1e;
     padding: 20px 40px;
     border-bottom: 1px solid #2a2a2a;
     display: flex;
     align-items: center;
+    font-size: 12px;
+    font-family: 'Apple SD Gothic Neo', 'Malgun Gothic', '맑은 고딕', arial, sans-serif;;
     }
     header h1 
     {
@@ -24,7 +26,41 @@
         height: 48px;
         width: 48px;
     }
-
+    .iText{
+        margin: -2px 0 0;
+        background: #fff;
+        width: 80px;
+        padding: 2px 5px;
+        border: 1px solid #bbb;
+    }
+    input[type="text"], input[type="password"]{
+        padding-block: 1px;
+        padding-inline: 2px;
+    }
+    .hLine .a {
+        margin: 0 7px 0 5px;
+        color: #fff;
+        text-decoration: none;
+    }
+    button{
+        display: inline-block;
+        position:relative;
+        margin: -2px 0 0 4px;
+        padding: 2px 7px;
+        border: 1px solid #ccc;
+        border-radius: 7px;
+        color:#555;
+        font-size: 11px;
+        cursor: pointer;
+        white-space: nowrap;
+        line-height: normal;
+        text-indent: 0px;
+        text-align: center;
+        box-sizing: border-box;
+        padding-block: 1px;
+        padding-inline: 6px;
+        
+    }
     /* 네비게이션 */
     nav 
     {
